# pebesen

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  TODO.md  clippy.toml  docker-compose.yml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
.sqlx/: query-08e729d33f58105320009a64783a37e848c8f9088e91392c8be04ba0ce621bc2.json  query-0d158d9d1256b1c396a3b331d5e6fb2efd9990f6325428e35bc3d6f8c5b78b80.json  query-0efa9d5308724b89eb7fb62c465e171d3ee2ed957d01d2ec963fc08c8c8cca8b.json  query-140f9202393c5ebfdd4b248bdc619acf4ce063f22b82d0d8ac2d2da93db2e601.json  query-18c92d89b5433ed57b5b0112b79188eafd0fa882df2ace76254d4b77c3b7e446.json  query-21b3a07d246f47bd2ff33092de6b8eeb368ea3333c74c7b92499a040bc27463c.json  query-45c361851b5f07c8e1676f689191ed7ad458024b4e06872a83a67d6961cee632.json  query-49f687d3dcb55d5d80a6ca95d613ec0ffa2644cf4b2e800d47dacfb6acdc9f36.json  query-55d963cbcf18ec8e63e62ce9c1b4a00c58342561643d3465cddba460d73cb62a.json  query-5c1213186659cb129a1b56ad5a0a24f699ec338cc178e6ae9c858d38ddbce719.json  query-6f0214dcad4b8e4efb7f584c304e5ec6dd1bc989b20ba0daa50125259a44bba3.json  query-71c64a0cd8f40d3f06bc4b8187846132fb99a69ffcb70b2d8d4d070b5a0cb888.json  query-86fd0f600e9dc6bf674ff618b3bd1c8bb47a463f94237adfee364ee2b068483e.json  query-8956328402ad21d36b2129123bd45f3ea429f3900cc3ad742f09c398e43f6e05.json  query-9265b9756a5016a30c537d7affd287b58c385e60dbe2f94e94e94d277d6bea6b.json  query-939c8a1878394057cd307c9bbe337b1b45d6ac78ded4df8de8bcc62902df5860.json  query-9a46e880c9186ddd7ee440114219cd8d775fc764e119cb69dff386882ae168d3.json  query-9dc280a6315b275ae8ba53de03b338121a8d5ff98f0eea9f62765fc44a4c2d20.json  query-a930b9d71807e5063e7dcf58052d65ba11df23155ffd4c262c5a257982d3e136.json  query-ae4b5479dae11bb7cd954d25a4bff2f415180056d7bac6db2b3a5cc982668fa8.json  query-af33014ceed3a84dc1cf98851d74efa1f75291b91d52cfcfc5182b200a3f321c.json  query-c3f6d013610cf3dabd3537bd656a192106d4a517e8e5dfb1ec8c597ebfa750fe.json  query-dc1ebb852377c119c7865dc83f4c553206325f442ca618e07f1d4449c3a0b348.json  query-e0266364eb6571e3e56884dd40016382451c4be1ccf8db6d0482af64be78c93e.json  query-e31f14d818b47b8ecc7789bbcfb526597238e092326db5562724ea139678ce10.json  query-e70966783c3fcd878cc569efc38d6461bb94dd02e95baaf942d0bf523f60ffcc.json  query-f4eed82c8539ec804adcceed9df7861bf2e2f1e42418a6f3893edd51a9c8f305.json  query-f4fa647f405904476ee0fa5a5d4a86642324f24f5aa96fad3769d93c2d687b27.json  query-fa2d9c11b05019c6a779a57d7f203929c8dfb6e1b8f7a5317350cd9c54f3424b.json  query-fb91091d6a13037fb78bb567f8c98ed762e9df3a94c9a55f483b8b4d47b8195b.json
crates/api/: Cargo.toml
crates/api/src/: auth.rs  lib.rs  messages.rs  middleware.rs  redis_pubsub.rs  search.rs  spaces.rs  streams.rs  topics.rs  websocket.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  memberships.rs  messages.rs  spaces.rs  streams.rs  topics.rs  users.rs
crates/intelligence/: Cargo.toml
frontend/: README.md  eslint.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  tsconfig.json
migrations/: 0001_extensions.sql  0002_users.sql  0003_spaces.sql  0004_memberships.sql  0005_streams.sql  0006_topics.sql  0007_messages.sql
scripts/: pre-commit-hooks.py
(+3 files in other folders)
