[workspace]
members = [
    "crates/api",
    "crates/core",
    "crates/db",
    "crates/search",
    "crates/notifications",
    "crates/bin",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "uuid", "time", "runtime-tokio", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Authentication
argon2 = "0.5"
jsonwebtoken = "9.3"

# Redis
redis = { version = "0.26", features = ["tokio-comp"] }

# Time
time = { version = "0.3", features = ["serde"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# Config
config = "0.14"

# Testing
mockall = "0.12"

# Development tools
cargo-watch = "8.5"
