[project]
name = "pebesen-dev-tools"
version = "0.1.0"
description = "Development tools and scripts for Pebesen"
requires-python = ">=3.10"
dependencies = [
    "pre-commit>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.12.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
