[package]
name = "pebesen-api"
version = "0.1.0"
edition = "2024"

[dependencies]
pebesen-core = { path = "../core" }
pebesen-db = { path = "../db" }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
argon2 = "0.5"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
jsonwebtoken = "9.0"
redis = { version = "0.25", features = ["tokio-comp"] }
tower_governor = "0.4"
tokio-tungstenite = "0.24"
futures = "0.3"
dashmap = "6.0"
meilisearch-sdk = "0.24"
