[package]
name = "pebesen-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "derive", "uuid", "chrono", "json"] }
axum = "0.7"
thiserror = "1.0"
pulldown-cmark = { version = "0.12", features = ["html"] }
ammonia = "4.0"
