[package]
name = "pebesen-db"
version = "0.1.0"
edition = "2024"

[dependencies]
pebesen-core = { path = "../core" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
